# tailwind-leptos-tauri-template

./: .gitignore  .neoconf.json  .taurignore  Cargo.toml  README.md  Trunk.toml  docker-compose.yml  index.html  leptosfmt.toml  prometheus.yml  rust-analyzer.json  rust-toolchain.toml  rustfmt.toml  tailwind.config.js
app/: Cargo.toml
app/src/: lib.rs
backend/: Cargo.toml
backend/src/: fallback.rs  lib.rs
frontend/: Cargo.toml  index.html  tailwind.config.js
frontend/src/: fallback.rs  lib.rs  main.rs
frontend/styles/: output.css
server/: Cargo.toml
server/src/: fallback.rs  lib.rs  main.rs  tracing_setup.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
