[workspace]
resolver = "2"
members = ["src-tauri", "frontend", "server", "app"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
lto = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[workspace.metadata.leptos]]
# project name
name = "leptos-project"
bin-package = "frontend"
lib-package = "frontend"
bin-exe-name = "frontend_bin"
output-name = "leptos_tauri"
assets-dir = "public"
tailwind-input-file = "input.css"
# without the style-file opt leptos watch gives and error 
style-file = "ignore.css"
site-pkg-dir = "pkg"
site-root = "target/site"
site-addr = "127.0.0.1:8000"
reload-port = 8001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
