[workspace]
resolver = "2"
members = ["src-tauri", "frontend", "backend", "app", "server"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
lto = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[workspace.metadata.leptos]]
# project name
name = "{{project-name}}"
bin-package = "server"
lib-package = "frontend"
output-name = "{{project-name}}"
assets-dir = "public"
tailwind-input-file = "input.css"
site-pkg-dir = "pkg"
site-root = "target/site"
site-addr = "127.0.0.1:8000"
reload-port = 8001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
