[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = "0.6"
leptos-use = "0.10"
leptos_meta = "0.6"
leptos_router = "0.6"
log = "0.4.20"
serde = "1.0.195"
serde_json = "1.0.111"
wasm-bindgen = "0.2.89"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1"
server = { path = "../server" }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos-use/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
