[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
leptos = "0.6"
leptos-use = "0.10"
leptos_meta = "0.6"
leptos_router = "0.6"
wasm-bindgen = "0.2.89"
tracing = "0.1"
backend = { path = "../backend" }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "backend/hydrate",
]
ssr = [
  "leptos/ssr",
  "leptos-use/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "backend/ssr",
]
