[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
leptos_meta = "0.6"
backend = { path = "../backend" }
leptos = "0.6"
tracing = "0.1"
leptos_router = "0.6"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "backend/hydrate",
  "leptos_router/hydrate",
]
ssr = ["leptos/ssr", "leptos_meta/ssr", "backend/ssr", "leptos_router/ssr"]
