[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
axum = { version = "0.7", optional = true }
cfg-if = "1.0.0"
leptos = "0.6"
leptos_axum = { version = "0.6", optional = true }
leptos_router = "0.6"
log = "0.4.20"
tower = { version = "0.4.10", optional = true }
tower-http = { version = "0.5.1", optional = true, features = [
  "fs",
  "cors",
  "trace",
] }
serde = "1.0.195"
serde_json = "1.0.111"
server_fn = "0.6"

[features]
hydrate = ["leptos/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr",
  "dep:leptos_axum",
  "leptos_router/ssr",
  "dep:axum",
  "dep:tower",
  "dep:tower-http",
]
