[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
axum = { version = "0.7", optional = true }
leptos = "0.6"
leptos_axum = { version = "0.6", optional = true }
tower = { version = "0.4.10", optional = true }
tower-http = { version = "0.5.1", optional = true, features = [
  "fs",
  "cors",
  "trace",
] }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr",
  "dep:leptos_axum",
  "dep:axum",
  "dep:tower",
  "dep:tower-http",
]
