[package]
name = "leptos_tauri_from_scratch"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "leptos_tauri_from_scratch_bin"
path = "./src/main.rs"

[dependencies]
axum = { version = "0.7.0", optional = true }
axum-macros = { version = "0.4.1", optional = true }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = "0.6"
leptos-use = "0.10"
leptos_axum = { version = "0.6", optional = true }
leptos_meta = "0.6"
leptos_router = "0.6"
log = "0.4.20"
serde = "1.0.195"
serde_json = "1.0.111"
server_fn = "0.6"
tokio = { version = "1.35.1", optional = true, features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", optional = true, features = [
  "fs",
  "cors",
  "trace",
] }
wasm-bindgen = "0.2.89"
tower = { version = "0.4.10", optional = true }
simple_logger = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:axum",
  "dep:axum-macros",
  "leptos/ssr",
  "leptos-use/ssr",
  "dep:leptos_axum",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:tower-http",
  "dep:tower",
  "dep:tokio",
]

[package.metadata.leptos]
bin-exe-name = "leptos_tauri_from_scratch_bin"
output-name = "leptos_tauri_from_scratch"
assets-dir = "../public"
site-pkg-dir = "pkg"
site-root = "target/site"
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
