[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
app = { path = "../app", features = ["ssr"] }
backend = { path = "../backend", features = ["ssr"] }
axum = { version = "0.7.0" }
axum-macros = { version = "0.4.1" }
leptos = "0.6"
leptos_axum = { version = "0.6" }
leptos_router = "0.6"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.23", default-features = true }
opentelemetry = { version = "0.22.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.22.0", default-features = false, features = [
  "trace",
  "rt-tokio",
] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-otlp = { version = "0.15.0", features = ["metrics"] }
opentelemetry-stdout = { version = "0.3.0", features = ["trace", "metrics"] }
